resources/status-board/production/status-board.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: status-board
  name: status-board-production
spec:
  host: 7xgbvicx49d9j58.api.openshift.com
  to:
    kind: Service
    name: status-board
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
